--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,22 +1,31 @@
 *{
     background-color: rgb(253, 226, 184);
+    font-size: 12pt;
     font-family: 'Oswald', sans-serif;
 }
 div {
+    margin: 10px;
     color:brown;
 }
 
 h1 {
-    margin: 10px;
+    font-size: 32pt;
+    margin: 0px;
+    font-family: 'Oswald', sans-serif;
 }
 
 h3 {
-    margin: 10px;
+    margin: 0px;
+    font-family: 'Oswald', sans-serif;
 }
 p {
-    margin: 10px;
+    margin: 0px;
+    font-family: 'Oswald', sans-serif;
 }
-
+#error {
+    color:red;
+    margin-top: 5px;
+}
 span {
     display: grid;
     
@@ -24,7 +33,7 @@ span {
 }
 button {
     color:rgb(255, 228, 194);
-    margin: 10px;
+    margin-top: 5px;
     padding: 3px 9px;
     border:none;
     border-radius: 5px;
@@ -37,7 +46,7 @@ button:disabled {
     background-color:rgb(168, 168, 168) ;
 }
 input {
-    margin: 10px;
+    margin: 0px;
     border-color: silver;
     background-color: seashell;
 }
