--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,49 +1,119 @@
-*{
-    background-color: rgb(253, 226, 184);
-    font-size: 12pt;
-    font-family: 'Oswald', sans-serif;
+.wrapper {
+    font-size: 20px;
+    font-family: 'Titillium Web', sans-serif;
+    max-width: 600px;
+    height: 100%;
+    margin: 0 auto;
+    background-color: rosybrown;
 }
-div {
-    margin: 10px;
-    color:brown;
-    font-family: 'Oswald', sans-serif;
+.Header {
+    color: rgb(90, 61, 61);
+    width: 100%;
+    grid-column: 2 / 4;
+    grid-row: 2/3;
+    background-color: rgb(241, 166, 166);
+}
+.Header>h1 {
+    font-size: 45px;
+    text-align: center;
+    font-weight: 600;
+}
+.Header>h3 {
+    font-size: 18px;
+    text-align: center;
+    margin-top: 10px;
+}
+.Action {
+    width: 100%;
+    grid-column: 2 / 3;
+    grid-row: 3/4;
+    background-color: rosybrown;
+}
+.Action>button {
+    width: 100%;
+    background-color: rgb(238, 174, 174);
+    border: none;
+    font-size: 40px;
+    text-align: center;
+    margin-top: 10px;
+}
+.Action>button:hover {
+    background-color: rgb(245, 188, 188);
 }
 
-h1 {
-    font-size: 32pt;
-    margin: 0px;
-    font-family: 'Oswald', sans-serif;
+.Options {
+    font-size: 18px;
+    grid-column: 2 / 4;
+    grid-row: 4/5;
+    background-color: rosybrown;
+    text-align: center;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
-
-h3 {
-    margin: 0px;
-    font-family: 'Oswald', sans-serif;
-}
-span {
-    margin: 0px;
-    font-family: 'Oswald', sans-serif;
-}
-#error {
-    color:red;
-    margin-top: 5px;
-}
-
-button {
-    color:rgb(255, 228, 194);
-    margin-top: 5px;
-    padding: 3px 9px;
+.Options>button { /*Remove All*/
+    color:rgb(51, 36, 36);
+    font-size: 18px;
+    display: inline-block;
+    background-color: rosybrown;
     border:none;
-    border-radius: 5px;
-    background-color: rgb(255, 125, 85);
+    align-self: flex-end;
+    margin-bottom: 20px;
 }
-button:hover {
-    background-color:rgb(252, 108, 64) ;
+.Options>button:hover {
+    color:rgb(216, 183, 183);
 }
-button:disabled {
-    background-color:rgb(168, 168, 168) ;
+
+.Option {
+    width: 95%;
+    height: 50px;
+    margin-left: 12px;
+    margin-bottom: 10px;
+    
+    background-color: rosybrown;
+    box-shadow:0px 0px 10px rgb(136, 96, 96);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-input {
-    margin: 0px;
-    border-color: silver;
-    background-color: seashell;
+.Option>button { /*Remove*/
+    font-size: 18px;
+    background-color: rosybrown;
+    border: none;
+    color:rgb(129, 92, 92);
+    align-self: center;
 }
+.Option>span {
+    padding:15px 10px;
+}
+
+#error {
+    font-size: 14px;
+}
+
+.AddOption {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 50px;
+}
+.AddOption>form>input {
+    font-size: 20px;
+    margin:10px 10px;
+    padding: 0px;
+    width: auto;
+    height: 30px;
+    border:none;
+    border-radius: 2px;
+}
+.AddOption>form>button {
+    background-color: whitesmoke;
+    border: none;
+    border-radius: 2px;
+    font-size: 20px;
+    width: auto;
+    height: 30px;
+}
+
