add option chance, to chance up specific option

--- a/src/styles/base/setting.scss
+++ b/src/styles/base/setting.scss
@@ -6,8 +6,10 @@ $widget-header-color:rgb(165, 50, 42);
 $widget-theme-color:rgb(248, 210, 160);
 $body-color: rgb(255, 226, 188);
 $button-color:rgb(95, 27, 27);
+$button-link-color:rgb(219, 154, 70);
 
 //space
+$xs-size:0.2rem;
 $s-size:1.2rem;
 $m-size:1.6rem;
 $l-size:3.2rem;
